# precision-replay

./: .gitignore  .gitmessage  Cargo.toml  Makefile  README.md  engineering_contract.md  rust-toolchain.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
artifacts/replay/math-i64f64-v1/: expected_result.txt  expected_witness.txt  input.txt
bsp/pru/: Cargo.toml
bsp/pru/src/: lib.rs
bsp/stm32/: Cargo.toml
bsp/stm32/src/: lib.rs
core/: Cargo.toml
core/examples/: replay_check.rs
core/src/: lib.rs  math.rs  replay.rs  replay_tests.rs
docs/design/: LLR_math.md  LLR_mvp.md  LLR_replay.md  LLR_target_io.md  LLR_witness.md  replay_prior_art_assessment.md  replay_system_story.md
docs/evidence/: raw_adc_capture_workflow.md
docs/evidence/mvp-rc1/: evidence_package.md  hardware_replay_artifact.md  hardware_replay_transcript.txt  stm32_flash_capture_procedure.md
docs/evidence/v0.1.0-rc1/: HARDWARE_SETUP.md  REPRODUCING.md  REVIEW_PACKET.md  SHA256SUMS  evidence_package.md  hardware_replay_artifact.md  hardware_replay_transcript.txt  manifest.toml  (+1 more)
docs/normative/: HLR_math.md  HLR_mvp.md  HLR_replay.md  HLR_target_io.md  HLR_witness.md  software_criteria.md  traceability_matrix.md
docs/release/: mvp_evidence_package.md  versioning.md
docs/verification/: SVCP_math.md
runners/pru-runner/: Cargo.toml
runners/stm32-runner/: Cargo.toml  build.rs  memory.x
scripts/: check_ci_contract.py  check_evidence_package.py  install-hooks.sh  test_check_ci_contract.py  test_check_evidence_package.py
tests/: test_check_raw_adc_capture.py  test_check_raw_adc_envelope.py  test_raw_adc_monitor.py  test_replay_check.py
tools/: check_raw_adc_capture.py  check_raw_adc_envelope.py  check_replay.py  raw_adc_monitor.py
verification/: Cargo.toml
verification/src/: lib.rs
(+11 files in other folders)
