[workspace]
members = [
    "core",
    "verification",
    "bsp/stm32",
    "bsp/pru",
    "runners/stm32-runner",
    "runners/pru-runner"
]
resolver = "2"

# Prevents bare-metal runner binaries from colliding with the host std library during default test sweeps
default-members = ["core"]

# Fixes the 'unwinding panics' error during standard development runs (cargo check / cargo build)
[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true  # Mandatory for Executable Object Code (EOC) traceability